<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">云笔记</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_config">ConfigActivity</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="title_activity_reg">RegActivity</string>
    <string name="title_activity_add">AddActivity</string>
    <string name="title_activity_update">UpdateActivity</string>
    <string name="tv_IP">IP地址：</string>
    <string name="tv_port">端口号：</string>
    <string name="hint_IP">请输入服务器IP</string>
    <string name="hint_port">请输入服务器端口号</string>
    <string name="btn_setting">设置</string>
    <string name="btn_cancel">取消</string>
    <string name="tv_user">账号</string>
    <string name="tv_pwd">密码</string>
    <string name="btn_login">登陆</string>
    <string name="btn_quit">退出</string>
    <string name="hint_user">请输入账号</string>
    <string name="hint_pwd">请输入密码</string>
    <string name="diary_name">笔记名称</string>
    <string name="diary_content">笔记内容</string>
    <string name="btn_add">添加</string>
    <string name="btn_update">修改</string>
    <string name="btn_reg">注册</string>
    <string name="tv_reg">还没账号，点击注册</string>
    <string name="btn_delete">删除</string>
    <string name="update_diary">编辑</string>

</resources>