<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:gravity="center"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
         >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_user" />

        <EditText
            android:id="@+id/et_user"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_user" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:layout_gravity="center_horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_pwd" />

        <EditText
            android:id="@+id/et_pwd"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/hint_pwd" />
    </LinearLayout>
 <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        <TextView 
            android:id="@+id/tv_reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_reg"
            android:layout_alignParentRight="true"
            android:layout_marginRight="40dp"
            />
         </RelativeLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        >

        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_login" />

        <Button
            android:id="@+id/btn_quit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_quit" />
    </LinearLayout>

</LinearLayout>